--- a/portfolio.html
+++ b/portfolio.html
@@ -8,102 +8,101 @@
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <!-- Верхняя линия -->
     <header>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"><span class="web-logo">Web</span><span class="studio-logo">Studio</span></a>
         <nav>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="auth-nav list">
+            <li><a href="mailto:info@devstudio.com" class="auth">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="auth">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
 <!-- Наши проекты -->
-<section>
+<section class="section">
     <!-- Фильтры -->
-    <h1>Портфолио</h1>
-    <ul>
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайты</button></li>
-        <li><button type="button">Приложения</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
+    <h1 class="portfolio-hero">Портфолио</h1>
+    <ul class="list">
+        <li><button type="button" class="button">Веб-сайты</button></li>
+        <li><button type="button" class="button">Все</button></li>
+        <li><button type="button" class="button">Приложения</button></li>
+        <li><button type="button" class="button">Дизайн</button></li>
+        <li><button type="button" class="button">Маркетинг</button></li>
     </ul>
     <!-- Собрание образцов работ -->
-    <ul>
+    <ul class="list">
         <li>
-            <a href="">
+            <a href="" class="portfolio-link">
                 <img src="./images/port1.jpg" alt="Наши разработчики" width="370" height="294">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="section-title title-spacing">Технокряк</h2>
+                <p class="section-text">Веб-сайт</p>
             </a>            
         </li>
         <li>
-            <a href="">
+            <a href="" class="portfolio-link">
             <img src="./images/port2.jpg" alt="Постер для игры в баскетбол" width="370" height="294">
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="section-title title-spacing">Постер New Orlean vs Golden Star</h2>
+            <p class="section-text">Дизайн</p>
         </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="portfolio-link">
                 <img src="./images/port3.jpg" alt="Постер для ресторана" width="370" height="294">
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <h2 class="section-title title-spacing">Ресторан Seafood</h2>
+                <p class="section-text">Приложение</p>
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="portfolio-link">
                 <img src="./images/port4.jpg" alt="Постер с наушниками" width="370" height="294">
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="section-title title-spacing">Проект Prime</h2>
+                <p class="section-text">Маркетинг</p>
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="portfolio-link">
                 <img src="./images/port5.jpg" alt="Постер с коробками" width="370" height="294">
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p>
+                <h2 class="section-title title-spacing">Проект Boxes</h2>
+                <p class="section-text">Приложение</p>
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="portfolio-link">
                 <img src="./images/port6.jpg" alt="Постер вдохновение не имеет границ" width="370" height="294">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
-                <p></p>
+                <h2 class="section-title title-spacing">Inspiration has no Borders</h2>
+                <p class="section-text">Веб-сайт</p>
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="portfolio-link">
                 <img src="./images/port7.jpg" alt="Постер с книгой" width="370" height="294">
-                <h2>Издание Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="section-title title-spacing">Издание Limited Edition</h2>
+                <p class="section-text">Дизайн</p>
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="portfolio-link">
                 <img src="./images/port8.jpg" alt="Постер с ярлыком" width="370" height="294">
-                <h2>Проект LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="section-title title-spacing">Проект LAB</h2>
+                <p class="section-text">Маркетинг</p>
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="portfolio-link">
                 <img src="./images/port9.jpg" alt="Постер растущий бизнес" width="370" height="294">
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
+                <h2 class="section-title title-spacing">Growing Business</h2>
+                <p class="section-text">Приложение</p>
             </a>
         </li>
     </ul>
@@ -112,15 +111,19 @@
 
     <!-- Подвал -->
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <address>
-            <ul>
-                <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                        target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="footer">
+            <a href="./index.html" class="logo-footer"><span class="web-footer">Web</span><span
+                    class="studio-logo">Studio</span></a>
+            <address class="footer-address">
+                <ul class="list">
+                    <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                            class="address" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li><a href="mailto:info@example.com" class="mail-tel">info@example.com</a></li>
+                    <li><a href="tel:+380991111111" class="mail-tel">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
